by linyu deng, at Nov, 2014

- set the sumbiting authorization for post 09
- correct the link of assets assigned of templates 11
- variablify the constant in templates 12
- reset the user auth of routes, adjust the level that allows user make a submitting for post and comment 13


by <author/maintainer>, at <month>, <year>

- initialize this file
- mark down the main tasks you intend to do
- append a day numeric if that task had been done
- about the task id in commit like C141112, c141113 14, c141115-18
  C141112 		- the task at day 12 in Nov, 2014
  c141113 14 	- the tasks at days 13 and 14 in Nov, 2014
  c141115-18	- the tasks at days from 15 to 18 in Nov, 2014