@@ -1,0 +1,4 @@
+---
+- path : /www/edit/post
+  level : 1
+
