@@ -2,4 +2,4 @@
 - body		:	first comment
   cpid		:	1
   uid		:	1
-  author	:	guest
+  author	:	simrb
