@@ -1,3 +1,7 @@
+by linyu deng, at Dec, 2014
+
+- update the authorization access accroding to new feature of main-repo 16
+
 by linyu deng, at Nov, 2014
 
 - set the sumbiting authorization for post 09
